test/compile_errors/stage1/test/reject_extern_variables_with_initializers.zig
extern var foo: int = 2;

// error
// backend=stage1
// target=native
// is_test=1
//
// tmp.zig:1:23: error: extern variables have no initializers
